--- a/packages/social-media-app/frontend/src/index.css
+++ b/packages/social-media-app/frontend/src/index.css
@@ -622,6 +622,18 @@ code {
         }
     }
 
+    /* Hide scrollbar for IE, Edge and Firefox */
+    .hide-scrollbar {
+        -ms-overflow-style: none;
+        /* IE and Edge */
+        scrollbar-width: none;
+        /* Firefox */
+    }
+
+    /* Hide scrollbar for Chrome, Safari, and Opera */
+    .hide-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
 
     /* Pulse animation makes the corner arc expand slightly while reducing in opacity */
     @keyframes pulsex {
