--- a/packages/social-media-app/frontend/src/index.css
+++ b/packages/social-media-app/frontend/src/index.css
@@ -86,6 +86,7 @@ code {
 }
 
 @layer base {
+
     input {
         @apply text-black;
         @apply dark:text-white;
@@ -98,6 +99,10 @@ code {
         @apply dark:text-neutral-50;
         @apply bg-neutral-50;
         @apply dark:bg-neutral-800;
+    }
+
+    body:not(.user-is-tabbing) button:focus {
+        outline: none;
     }
 
     span {
@@ -239,9 +244,9 @@ code {
     }
 
     /* Narrow focus ring or outline for accessibility */
-    .btn:focus {
-        @apply outline-none ring-2 ring-primary-300 dark:ring-primary-500;
-    }
+    /*  .btn:focus {
+        @apply outline-none;
+    } */
 
     .btn-unfocus-immediately {
         @apply focus:outline-none;
