--- a/packages/social-media-app/frontend/src/index.css
+++ b/packages/social-media-app/frontend/src/index.css
@@ -11,6 +11,9 @@ body {
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+
+    overflow-anchor: auto;
+    /* Prevents scroll anchoring (scrolling through a feed with dynamic content looks better this way) */
 }
 
 code {
@@ -99,6 +102,8 @@ code {
         @apply dark:text-neutral-50;
         @apply bg-neutral-50;
         @apply dark:bg-neutral-900;
+
+        /* check if there is a global bg css  */
     }
 
     body:not(.user-is-tabbing) button:focus {
