--- a/packages/social-media-app/frontend/src/index.css
+++ b/packages/social-media-app/frontend/src/index.css
@@ -250,7 +250,7 @@ code {
         font-family: "Comic Neue", cursive;
     }
 
-    .ganja-font {
+    .font-ganja {
         font-family: "Gamja Flower", sans-serif;
     }
 
@@ -324,11 +324,13 @@ code {
 
     .btn-toggle[data-state="on"] {
         @apply bg-primary-400 dark:bg-primary-600;
+        @apply text-neutral-50 dark:text-neutral-200;
         box-shadow: 0 1px #666 !important;
         transform: translateY(4px) !important;
     }
 
     .btn-toggle-flat {
+        border: none;
         box-shadow: 0 0px
     }
 
